fixed: text-align start for reviews-slider__text for

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -268,6 +268,8 @@
         padding: 0 30px 30px
         &:after, &:before
           display: none
+      &__text
+        text-align: start
       &__button
         top: 32px
         &_prev
